<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/md_theme_light_primary"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:title="Store Details"
            app:titleCentered="true"
            app:titleTextColor="@color/md_theme_light_onPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:transitionName="@string/name_to_name_trans">

        <ImageView
            android:id="@+id/iv_icon_cart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/_20dp"
            android:contentDescription="@string/carts_icon_text"
            android:src="@drawable/icon_carts" />

        <TextView
            android:id="@+id/tv_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingTop="@dimen/_5dp"
            android:paddingEnd="@dimen/_10dp"
            android:paddingBottom="@dimen/_5dp"
            android:text="@string/store_name_text"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_store_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5dp"
            android:drawablePadding="@dimen/_5dp"
            android:gravity="center"
            android:paddingStart="@dimen/_10dp"
            android:paddingTop="@dimen/_5dp"
            android:paddingEnd="@dimen/_10dp"
            android:paddingBottom="@dimen/_5dp"
            android:text="@string/_1"
            app:drawableStartCompat="@drawable/icon_id" />

        <TextView
            android:id="@+id/tv_store_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10dp"
            android:paddingStart="@dimen/_10dp"
            android:paddingTop="@dimen/_5dp"
            android:paddingEnd="@dimen/_10dp"
            android:paddingBottom="@dimen/_5dp"
            android:text="@string/dummy_address"
            app:drawableStartCompat="@drawable/baseline_my_location_24" />

    </LinearLayout>

</RelativeLayout>